--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "email-templates": "^8.0.4",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "email-templates": "^9.0.0",
+    "express": "^4.18.1",
     "express-paginate": "^1.0.2",
-    "express-validator": "^6.10.0",
+    "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.4",
-    "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.5.0",
-    "passport": "^0.4.1",
+    "mongoose": "^6.3.6",
+    "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.5",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "swagger-autogen": "^2.7.9",
-    "swagger-ui-express": "^4.1.6"
-  }
+    "swagger-autogen": "^2.21.3",
+    "swagger-ui-express": "^4.4.0"
+  },
+  "author": "Abdelrahman <abood_shaban_1999@hotmail.com>",
+  "description": ""
 }
