--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_DB=mongodb://localhost:27017/rocktech
-PORT=5000
+MONGO_DB=mongodb://localhost:27017/api-blog
+PORT=3000
 LIMIT=10
 MAX_LIMIT=50
 JWT_SECRET=Q6bTHgB4bl8dyqopf8scOWxPu0TykljL
